tests/ui/macros/issue-39388.stderr
error: expected one of: `*`, `+`, or `?`
  --> $DIR/issue-39388.rs:4:22
   |
LL |     (($($a:tt)*) = ($($b:tt))*) => {
   |                      ^^^^^^^

error: aborting due to 1 previous error

